<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyChat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="send">发送</string>
    <string name="frame_title">聊天</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开</string>
    <string name="anonymous">匿名</string>
    <string name="login_title">QQ2013</string>
    <string name="register">注册</string>
    <string name="findPass">找回密码</string>
    <string name="login">登陆</string>
    <string name="remember">记住密码</string>
    <string name="autologin">自动登陆</string>
    <string name="notid">请输入帐号</string>
    <string name="notpass">请输入密码</string>
    <string name="passerror">你输入的密码不正确</string>
    <string name="usernotfind">你输入的帐号不存在</string>
    <string name="name">用户昵称</string>
    <string name="pass">登陆密码</string>
    <string name="twopass">确认密码</string>
    <string name="namenotnull">请输入用户昵称!</string>
    <string name="passnotnull">请输入登陆密码!</string>
    <string name="twopassnotpass">确认密码和登陆密码不一置!</string>
    <string name="beingRegister">注册中......</string>
    <string name="succesAlert">注册成功!你的ID为:\n%s\n请勿必记住,它将做为你的登陆帐号!</string>
    <string name="commit">提交</string>
    <string name="offlineNotification">下线通知</string>
    <string name="offlineWarn">你的帐号在另一地点登陆,您被迫下线</string>
    <string name="exit">退出登陆</string>
    <string name="message">会话</string>
    <string name="contact">联系人</string>
    <string name="love">爱心</string>
    <string name="setting">设置</string>
    <string name="search_contact">搜索联系人</string>
    <string name="add_contact">添加联系人</string>
    <string name="myfriend">我的好友</string>
    <string name="blacklist">黑名单</string>
    <string name="newmessage">最近消息</string>
    <string name="status_online">在线</string>
    <string name="status_offline">离线</string>
    <string name="status_stedlth">隐身</string>
    <string name="status_leave">离开</string>
    <string name="user_register">新用户注册</string>
    <string name="back">返回</string>
    <string name="register_process">注册流程:</string>
    <string name="process_commit">提交信息-></string>
    <string name="process_account">生成帐号</string>
    <string name="six">性别</string>
    <string name="six_man">男</string>
    <string name="six_woman">女</string>
    <string name="registerFail">注册失败!请重新注册!</string>
    <string name="signature">个性签名</string>
    <string name="user_info">我的资料</string>
    <string name="about_me">关于我们</string>
    <string name="update_success">更新成功</string>
    <string name="update_fail">更新失败</string>
    <string name="register_now">注册中</string>
    <string name="login_now">正在登陆</string>
    <string name="no_connectivity">网络未连接!</string>
    <string name="add_user">添加帐户</string>
    <string name="no_user_toast">请登陆一个用户!</string>

</resources>