<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/userPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dip"
        android:background="@drawable/defalut_photo"
        android:contentDescription="@string/login"
        android:src="@drawable/photo_frame" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dip"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/userId"
            android:layout_width="225dip"
            android:layout_height="45dip"
            android:background="@drawable/login_text_bg"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dip"
            android:textSize="14sp"
            android:inputType="number"
            android:paddingLeft="15dip" />

        <EditText
            android:id="@+id/userPass"
            android:layout_width="225dip"
            android:layout_height="45dip"
            android:layout_marginTop="10dip"
            android:textSize="14sp"
            android:background="@drawable/login_text_bg"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dip"
            android:inputType="textPassword"
            android:paddingLeft="15dip" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center_vertical" >

            <com.huanghua.mychat.widght.AphoneCheckBox
                android:id="@+id/remeber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/remeberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/remeber"
                android:text="@string/remember"
                android:paddingLeft="6dip"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/autoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/autologin"
                android:paddingLeft="6dip"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <com.huanghua.mychat.widght.AphoneCheckBox
                android:id="@+id/autologin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/autoLabel" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:background="@drawable/login_commit_left_bg"
            android:paddingRight="15dip"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/login"
            android:background="@drawable/star" />

        <Button
            android:id="@+id/register"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:background="@drawable/login_commit_right_bg"
            android:paddingLeft="15dip"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>