<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tab_text_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title"
        android:gravity="center_vertical"
        android:paddingBottom="8dip"
        android:paddingTop="8dip" >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:layout_marginLeft="15dip"
            android:background="@drawable/back_button_bg"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/setting"
            android:textColor="@color/tab_text_color"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting"
            android:textColor="@color/tab_text_color"
            android:textSize="22sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:paddingLeft="14dip"
        android:paddingRight="14dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/save_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/current_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/setting_button_top_bg"
                    android:clickable="true"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/user_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="2dip"
                        android:layout_marginLeft="12dip"
                        android:layout_marginTop="2dip"
                        android:background="@drawable/user_photo_frame"
                        android:contentDescription="@string/contact"
                        android:src="@drawable/user_photo_default" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dip"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="2dip"
                        android:layout_toRightOf="@+id/user_photo"
                        android:textStyle="bold"
                        android:textColor="@drawable/text_black_white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/user_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dip"
                        android:layout_alignBottom="@+id/user_photo"
                        android:layout_marginBottom="3dip"
                        android:layout_toRightOf="@+id/user_photo"
                        android:textColor="@drawable/text_black_white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/user_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dip"
                        android:gravity="center_vertical|right"
                        android:textColor="@drawable/text_black_white"
                        android:textSize="14sp" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/add_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_button_bottom_bg"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingBottom="12dip"
                android:paddingTop="12dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dip"
                    android:drawableLeft="@drawable/add_user"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/add_user"
                    android:textColor="@drawable/text_black_white"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/status_online"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/setting_button_top_bg"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingBottom="12dip"
                android:paddingTop="12dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dip"
                    android:layout_marginRight="15dip"
                    android:text="@string/status_online"
                    android:textColor="@drawable/text_black_white"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/status_online_flag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dip"
                    android:background="@drawable/select_flag"
                    android:contentDescription="@string/action_settings"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/status_stealth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_button_middle_bg"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingBottom="12dip"
                android:paddingTop="12dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dip"
                    android:layout_marginRight="15dip"
                    android:text="@string/status_stedlth"
                    android:textColor="@drawable/text_black_white"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/status_stealth_flag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dip"
                    android:background="@drawable/select_flag"
                    android:contentDescription="@string/action_settings"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/status_leave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_button_bottom_bg"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingBottom="12dip"
                android:paddingTop="12dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dip"
                    android:layout_marginRight="15dip"
                    android:text="@string/status_leave"
                    android:textColor="@drawable/text_black_white"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/status_leave_flag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dip"
                    android:background="@drawable/select_flag"
                    android:contentDescription="@string/action_settings"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>